@@ -71,6 +71,18 @@
         <div id="news">
 	    <h2 class="">News</h2>
 
+	    <h3>February 2, 2009</h3>
+   	      <b>Unstable</b> version 0.13.4 released!  New features since
+   	      version 0.13.3 include:
+   	      <ul>
+   	        <li>Print addin rewritten to use latest APIs. Still buggy in this release.</li>
+   	        <li>Printing multi-page HTML exports should work now.</li>
+		<li>Fix some UI glitches in Windows.</li>
+		<li>Fix crash when clicking URLs and default browser not set.</li>
+   	        <li>And <a href="http://svn.gnome.org/viewcvs/tomboy/tags/TOMBOY_0_13_4/NEWS?view=markup">more</a></li>
+              </ul>
+   	      <a href="download.html">Download it</a>
+
 	    <h3>January 24, 2009</h3>
    	      <b>Unstable</b> version 0.13.3 released!  New features since
    	      version 0.12.0 include:
