@@ -1,3 +1,8 @@
+2008-02-02  Sandy Armstrong  <sanfordarmstrong@gmail.com>
+
+	* index.html: Updated for 0.13.4 release.
+	* download.html: Ditto.
+
 2008-01-26  Sandy Armstrong  <sanfordarmstrong@gmail.com>
 
 	* download.html: Added links to installation instructions.
